# Komodo_Hub

./: .env  LOCAL_SETUP.md  MANUAL.md  README.md  app.py  forms.py  main.py  models.py  pyproject.toml
attached_assets/: Pasted-A-Digital-Platform-for-Community-Supported-Animal-Conservation-BACKGROUND-The-Problems-Bada-1741011948213.txt
blueprints/: admin.py  auth.py  education.py  forum.py  library.py  main.py  profile.py  sightings.py  species.py
instance/: komodo.db
scripts/: enhanced_data.py  init_data.py
templates/: base.html  landing.html
templates/admin/: dashboard.html  database.html  edit_user.html  users.html
templates/auth/: generate_token.html  login.html  register.html  register_student.html
templates/dashboard/: community.html  default.html  student.html  teacher.html
templates/education/: resources.html
templates/errors/: 500.html
templates/forum/: community_dashboard.html  index.html  partial_index.html  view_thread.html
templates/profile/: view.html
templates/programs/: add.html
templates/progress/: student_list.html  view_progress.html
templates/sightings/: map.html  partial_list.html
templates/species/: list.html  view.html
